--- a/BankyBonky/BankyBonky.vcxproj
+++ b/BankyBonky/BankyBonky.vcxproj
@@ -142,12 +142,14 @@
     <ClCompile Include="BankyBonky.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="Employee.cpp" />
+    <ClCompile Include="Manager.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BankSystem.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="Employee.h" />
+    <ClInclude Include="Manager.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
