--- a/BankyBonky/BankyBonky.vcxproj
+++ b/BankyBonky/BankyBonky.vcxproj
@@ -146,11 +146,10 @@
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BankSystem.h" />
-    <ClInclude Include="Client.h" />
-    <ClInclude Include="Employee.h" />
-    <ClInclude Include="Manager.h" />
-    <ClInclude Include="User.h" />
+    <ClInclude Include="Client.hpp" />
+    <ClInclude Include="Employee.hpp" />
+    <ClInclude Include="Manager.hpp" />
+    <ClInclude Include="User.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
